# RATS-Software

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Doxyfile  README.md  control.ino  format.sh
Transmit_Test/: Transmit_Test.ino
control/: control.ino
install/cmake/InfluxDB/: InfluxDBConfig.cmake  InfluxDBTargets-relwithdebinfo.cmake
install/cmake/cpr/: cprTargets-noconfig.cmake  cprTargets.cmake
install/include/InfluxDB/: influxdb_export.h
install/lib/: libInfluxDB.so.1  libcpr.so.1.11.2  libcurl.so.4.8.0
install/lib/cmake/InfluxDB/: InfluxDBTargets.cmake
install/lib/docker/cli-plugins/: docker-ai  docker-buildx  docker-compose  docker-debug  docker-desktop  docker-dev  docker-extension  docker-feedback  docker-init  docker-sbom  docker-scout
lib/pico-servo/: CMakeLists.txt
lib/pico-servo/examples/: CMakeLists.txt
lib/pico-servo/src/: pico_servo.c
lib/pico-stepper/example/: CMakeLists.txt
lib/pico-stepper/lib/: stepper.c
src/: constants.hpp  control.ino  data.hpp  formulas.cpp  formulas.hpp  hw_config.cpp  main.cpp  mover.cpp  mover.hpp  pins.hpp  radio.cpp  radio.hpp  sd.cpp  sd.hpp  stepper.hpp
test/: CMakeLists.txt  blink.cpp  hw_config.c
test/RATS/: CMakeLists.txt
test/Servo_Stepper_Test/: CMakeLists.txt  servo_stepper.cpp
test/bluetooth_payload/: main.py  pico_a_bluetooth.py
test/bus_scan/: bus_scan.cpp
test/gps/: CMakeLists.txt  gps.cpp  ublox_mx.cpp  ublox_mx.hpp
test/proxy/: CMakeLists.txt  cat.cpp  cat.hpp  database.cpp  database.hpp  main.cpp  storage.cpp  storage.hpp  usb.cpp  usb.hpp  util.cpp  util.hpp
test/radio/: CMakeLists.txt  hw_config.c  radio.cpp  radio_dma.cpp  uart.cpp
test/radio_payload_tx/: main.py
test/radio_sd_write/: CMakeLists.txt  hw_config.c  radio_sd_write.cpp  telemetry.hpp
test/sd_write/: sd_write.cpp
